# loom-log

./: .gitignore  CMakeLists.txt  Dependencies.cmake
include/: log-utils.h  logger.h  loom-log-types.h
include/loomlog/: log-types.h  log-utils.h  logger.h
include/warp/: base.h  log-types.h  log-utils.h  log.h  logger.h  types.h  utils.h
include/warp/api/: api-base.h  api-emby-types.h  api-emby.h  api-jellystat-types.h  api-jellystat.h  api-manager.h  api-plex-types.h  api-plex.h  api-response.h  api-tautulli-types.h  api-tautulli.h  api-types.h
include/warp/log/: log-types.h  log-utils.h  log.h  logger.h
include/warp/scheduler/: cron-scheduler.h
src/: ansii-formatter.cpp  ansii-formatter.h  ansii-remove-formatter.cpp  ansii-remove-formatter.h  base.cpp  internal-types.h  log-apprise-sync.h  logger.cpp
src/api/: api-base.cpp  api-emby-json-types.h  api-emby.cpp  api-jellystat-json-types.h  api-jellystat.cpp  api-manager.cpp  api-plex-json-types.h  api-plex.cpp  api-tautulli-json-types.h  api-tautulli.cpp  api-utils.h
src/logger/: ansii-formatter.cpp  ansii-formatter.h  ansii-remove-formatter.cpp  ansii-remove-formatter.h  internal-types.h  log-apprise-sync.h  log-gotify-sync.h  logger.cpp
src/scheduler/: cron-scheduler.cpp
